<resources>
    <string name="app_name">TP5_DF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lab 5 Mobile Dev. - Android</string>
    <string name="nav_header_subtitle">Fares Dokali</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sensors">All Sensores</string>
    <string name="menu_accelerometer">Accelerometer</string>
    <string name="menu_gyroscopre">Gyroscopre</string>
    <string name="menu_magnetometer">Magnetometer</string>
    <string name="menu_proximity">Proximity</string>
    <string name="menu_photometer">Photometer</string>
</resources>
